2008-09-01  Esteban Sanchez  <estebans@artica.es>

	* extensions/update_manager/sql/update_manager.sql,
	extensions/update_manager.php: Updated server info to
	the final Update manager host.

	* extensions/update_manager/main.php: Added a information message
	about Update Manager extension.

	* update_manager/load_updatemanager.php: Get module count into user
	key.

2008-09-01  Sancho Lerena <slerena@artica.es>

	* pandora_logo.png: White background for IE6 users.

	* index.php: Updated version and develop bypass.

	* header.php, pandora.css: Better view in IE6.

	* estado_ultimopaquete.php: Fixes bad render for big numbers.

	* snmp_view.php: Fixes problems with IE6 render. Better view
	of custom OID (shortened and as tooltip).

	* stat_win.php: Fixed problem with slicer in IE6.

2008-09-01  Raul Mateos  <raulofpandora@gmail.com>

	* operation/snmp/smp_console/snmp_view.php: Show substring in custom value, when the mouse is
	over data, it shows all the custom value. Cosmetic change.
	
	* operation/events/events.php: Closed several html tags.
	
	* general/error_install.php: Updated page title.

2008-09-01  Esteban Sanchez  <estebans@artica.es>

	* reporting/pandora_graph.php: Added to repository. New abstract class
	PandoraGraphAbstract to allow the change of the graphic engine easily.

	* reporting/fgraph.php: Rewritten to remove all the references to
	PEAR::Image and replaced by the new Pandora Graph abstract class.

	* reporting/pearimage_graph.php: Added to repository. Implements
	PandoraGraphAbstract class with the PEAR::Image functions.

2008-09-01  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: updated 
	Spanish translation.

2008-09-01  Sancho Lerena <slerena@artica.es>

	* include/, fgraph.php: Moved licence of libraries to LGPL.

	* install.php: Added dependency check for several new includes
	from pear (xml_rpc and DB), also graphviz twopi binary and check